[package]
name = "pex"
version = "0.0.7"
authors = ["Aster <192607617@qq.com>"]
description = "A parser combinator library for Rust."
repository = "https://github.com/oovm/pex"
documentation = "https://docs.rs/pex"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
ucd-trie = { version = "0.1.5", optional = true }
regex-automata = { version = "0.2.0", optional = true }

[dev-dependencies]

[features]
default = []
