[package]
name = "pex-trie"
version = "0.0.8"
authors = ["Aster <192607617@qq.com>"]
description = "A parser combinator library for Rust."
repository = "https://github.com/oovm/pex"
documentation = "https://docs.rs/pex"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
ucd-trie = "0.1.5"

[dev-dependencies]

[features]
default = []
