[package]
name = "pex-trie"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "A parser combinator library for Rust."
repository = "https://github.com/oovm/pex"
documentation = "https://docs.rs/pex"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["tests/", "packages.json", "build.sh"]

[dependencies]
ucd-trie = "0.1.5"
unicode-script = "0.5.5"

[dev-dependencies]

[features]
default = []
