[package]
name = "shallow"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "shallow text"
repository = "https://github.com/oovm/pex"
documentation = "https://docs.rs/pex"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["tests/", "packages.json"]

[dependencies]

[dev-dependencies]

[features]
default = []
