[package]
name = "shallow"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "shallow long text"
repository = "https://github.com/oovm/pex"
documentation = "https://docs.rs/shallow"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["tests/", "packages.json"]

[dependencies]

[dev-dependencies]

[features]
default = []
